--- a/src/pages/category/category.styles.scss
+++ b/src/pages/category/category.styles.scss
@@ -1,7 +1,7 @@
 .category-title {
   font-size: 28px;
   margin-bottom: 25px;
-  cursor: pointer;
+  text-align: center;
 }
 
 .products-container {
