--- a/src/pages/shop/shop_page.styles.scss
+++ b/src/pages/shop/shop_page.styles.scss
@@ -2,6 +2,8 @@
   font-size: 28px;
   margin-bottom: 25px;
   cursor: pointer;
+  text-decoration: none;
+  color: black;
 }
 
 .products-container {
